Live coding sessin 7 - Vicálvaro

--- a/PF-2/templates/2.2-Recursion.ipynb
+++ b/PF-2/templates/2.2-Recursion.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "\u001b[32mimport \u001b[39m\u001b[36morg.scalatest._\u001b[39m"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,14 +969,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestLast\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "object TestLast extends FlatSpec with Matchers{\n",
+    "class TestLast(last: List[Int] => Option[Int]) \n",
+    "extends FlatSpec with Matchers{\n",
     "    \"last\" should \"work\" in {\n",
+    "        last(List(1,2,3)) shouldBe Some(3)\n",
+    "        last(List(1)) shouldBe Some(1)\n",
+    "        last(List()) shouldBe None\n",
     "    }\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlast\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def last[A](list: List[A]): Option[A] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            None : Option[A]\n",
+    "        case head :: tail => \n",
+    "            tail match {\n",
+    "                case Nil => \n",
+    "                    Some(head) : Option[A]\n",
+    "                case head2 :: tail2 => \n",
+    "                    last(tail) : Option[A]\n",
+    "            } \n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlast\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def last[A](list: List[A]): Option[A] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            None : Option[A]\n",
+    "        case head :: tail => \n",
+    "            tail match {\n",
+    "                case Nil => \n",
+    "                    Some(head) : Option[A]\n",
+    "                case _ :: _ => \n",
+    "                    last(tail) : Option[A]\n",
+    "            } \n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlast\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def last[A](list: List[A]): Option[A] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            None : Option[A]\n",
+    "        case head :: tail => \n",
+    "            if (tail.isEmpty) Some(head)\n",
+    "            else last(tail)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlast\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def last[A](list: List[A]): Option[A] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            None : Option[A]\n",
+    "        case head :: Nil => \n",
+    "            Some(head) : Option[A]\n",
+    "        case head :: head2 :: tail2 => \n",
+    "            //last(tail) : Option[A]\n",
+    "            last(head2 :: tail2) : Option[A]\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlast\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def last[A](list: List[A]): Option[A] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            None : Option[A]\n",
+    "        case head :: Nil => \n",
+    "            Some(head) : Option[A]\n",
+    "        case ::(head, tail) => \n",
+    "            last(tail) : Option[A]            \n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlast\u001b[39m"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def last[A]: List[A] => Option[A] = \n",
+    "    (list : List[A]) => \n",
+    "        list match {\n",
+    "            case Nil => \n",
+    "                None : Option[A]\n",
+    "            case head :: Nil => \n",
+    "                Some(head) : Option[A]\n",
+    "            case ::(head, tail) => \n",
+    "                last(tail) : Option[A]            \n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlast\u001b[39m"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def last[A]: List[A] => Option[A] = \n",
+    "    {\n",
+    "        case Nil => \n",
+    "            None\n",
+    "        case head :: Nil => \n",
+    "            Some(head)\n",
+    "        case _ :: tail => \n",
+    "            last(tail)          \n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlast\u001b[39m"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def last[A](list: List[A]): Option[A] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            None\n",
+    "        case head :: Nil => \n",
+    "            Some(head)\n",
+    "        case _ :: tail => \n",
+    "            last(tail)          \n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlast\u001b[39m"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def last[A]: List[A] => Option[A] = \n",
+    "    _ match {\n",
+    "        case Nil => \n",
+    "            None : Option[A]\n",
+    "        case head :: Nil => \n",
+    "            Some(head) : Option[A]\n",
+    "        case ::(head, tail) => \n",
+    "            last(tail) : Option[A]            \n",
+    "    }"
    ]
   },
   {
@@ -984,15 +1258,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "object Std{\n",
+    "    sealed abstract class List[A]\n",
+    "    case object Nil extends List[Nothing]\n",
+    "    case class ::[A](head: A, tail: List[A]) extends List[A]\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd3$Helper$TestLast:\u001b[0m\n",
+      "\u001b[32mlast\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "run(TestLast)"
+    "run(new TestLast(last))"
    ]
   },
   {
@@ -1011,30 +1301,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestInsertLast\u001b[39m"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "object TestInsertLast extends FlatSpec with Matchers{\n",
+    "class TestInsertLast(\n",
+    "    insertLast: (List[Int], Int) => List[Int]) \n",
+    "extends FlatSpec with Matchers{\n",
     "    \"insertLast\" should \"work\" in {\n",
+    "        insertLast(List[Int](), 1) shouldBe \n",
+    "            (List(1) : List[Int])\n",
+    "        insertLast(List(1), 2) shouldBe \n",
+    "            (List(1,2) : List[Int])\n",
+    "        insertLast(List(1,2,3,4), 5) shouldBe \n",
+    "            List(1,2,3,4) :+ 5\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres20\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mList\u001b[39m(\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m, \u001b[32m4\u001b[39m)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "List(1,2,3) :+ 4"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36minsertLast\u001b[39m"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "run(TestInsertLast)"
+    "def insertLast[A](list: List[A], a: A): List[A] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            List(a) : List[A]\n",
+    "        case head :: tail => \n",
+    "            head :: insertLast(tail, a) : List[A]\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd21$Helper$TestInsertLast:\u001b[0m\n",
+      "\u001b[32minsertLast\u001b[0m\n",
+      "\u001b[31m- should work *** FAILED ***\u001b[0m\n",
+      "\u001b[31m  List() was not equal to List(1) (cmd21.sc:5)\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "run(new TestInsertLast(insertLast))"
    ]
   },
   {
@@ -1053,50 +1412,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestReverse\u001b[39m"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "object TestReverse extends FlatSpec with Matchers{\n",
+    "class TestReverse(\n",
+    "    reverse: List[Int] => List[Int]\n",
+    ") extends FlatSpec with Matchers{\n",
     "    \"reverse\" should \"work\" in {\n",
+    "        reverse(List()) shouldBe List()\n",
+    "        reverse(List(1,2,3)) shouldBe List(3,2,1)\n",
+    "        reverse(1 :: List(2,3)) shouldBe \n",
+    "            List(3,2) :+ 1\n",
+    "        reverse(List(1)) shouldBe List(1)\n",
+    "        reverse(List(1,2,3,2,1)) shouldBe List(1,2,3,2,1)\n",
+    "        reverse(1::List(2,3,2,1)) shouldBe \n",
+    "            List(1,2,3,2) :+ 1\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverseR\u001b[39m"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// Recursively: Really inefficient \n"
+    "// Recursively: Really inefficient \n",
+    "def reverseR[A](list: List[A]): List[A] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            Nil : List[A]\n",
+    "        case head :: tail => \n",
+    "            val reverseTail: List[A] = reverseR(tail)\n",
+    "            reverseTail :+ head : List[A]\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverseR\u001b[39m"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "run(TestReverse)"
+    "// Recursively: Really inefficient \n",
+    "def reverseR[A](list: List[A]): List[A] = \n",
+    "    list match {\n",
+    "        case Nil => \n",
+    "            Nil\n",
+    "        case head :: tail => \n",
+    "            reverseR(tail) :+ head\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd27$Helper$TestReverse:\u001b[0m\n",
+      "\u001b[32mreverse\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "// Tail-recursive, efficiently\n"
+    "run(new TestReverse(reverseR))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverseI\u001b[39m"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "run(TestReverse)"
+    "// out = Nil\n",
+    "// aux = 1 :: 2 :: 3 :: Nil\n",
+    "// 1 it.\n",
+    "// out = 1 :: Nil\n",
+    "// aux = 2 :: 3 :: Nil\n",
+    "// 2 it. \n",
+    "// out = 2 :: (1 :: Nil)\n",
+    "// aux = 3 :: Nil\n",
+    "// 3 it. \n",
+    "// out = 3 :: 2 :: 1 :: Nil\n",
+    "// aux = Nil\n",
+    "\n",
+    "// Tail-recursive, efficiently\n",
+    "def reverseI[A](list: List[A]): List[A] = {\n",
+    "    var out: List[A] = List()\n",
+    "    var aux: List[A] = list\n",
+    "    while (aux != Nil) {\n",
+    "        out = aux.head :: out\n",
+    "        aux = aux.tail\n",
+    "    }\n",
+    "    out\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mreverseI\u001b[39m"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// out = Nil\n",
+    "// aux = 1 :: 2 :: 3 :: Nil\n",
+    "// 1 it.\n",
+    "// out = 1 :: Nil\n",
+    "// aux = 2 :: 3 :: Nil\n",
+    "// 2 it. \n",
+    "// out = 2 :: (1 :: Nil)\n",
+    "// aux = 3 :: Nil\n",
+    "// 3 it. \n",
+    "// out = 3 :: 2 :: 1 :: Nil\n",
+    "// aux = Nil\n",
+    "\n",
+    "// Tail-recursive, efficiently\n",
+    "def reverseT[A](list: List[A]): List[A] = {\n",
+    "    \n",
+    "    def revAux(out: List[A], aux: List[A]): List[A] = \n",
+    "        aux match {\n",
+    "            case Nil => out\n",
+    "            case head :: tail => \n",
+    "                revAux(head :: out, tail)\n",
+    "        }\n",
+    "    /*\n",
+    "    var out: List[A] = List()\n",
+    "    var aux: List[A] = list\n",
+    "    while (aux != Nil) {\n",
+    "        out = aux.head :: out\n",
+    "        aux = aux.tail\n",
+    "    }\n",
+    "    out*/\n",
+    "    revAux(List(), list)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd27$Helper$TestReverse:\u001b[0m\n",
+      "\u001b[32mreverse\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "run(new TestReverse(reverseT))"
    ]
   },
   {
@@ -1170,11 +1698,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".sc",
+   "file_extension": ".scala",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.12.11"
   }
  },
  "nbformat": 4,
