--- a/PF-2/exercises/ProblemSet3.ipynb
+++ b/PF-2/exercises/ProblemSet3.ipynb
@@ -11,9 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36morg.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import org.scalatest._"
@@ -265,7 +278,8 @@
     "        candidate(List()) shouldBe (List(), List())\n",
     "        candidate(List(1,3,5)) shouldBe (List(1,3,5), List())\n",
     "        candidate(List(0,2,4,6)) shouldBe (List(), List(0,2,4,6))\n",
-    "        candidate(List(1,2,3,4,5)) shouldBe (List(1,3,5), List(2,4))\n",
+    "        candidate(List(1,2,3,4,5)) shouldBe \n",
+    "            (List(1,3,5), List(2,4))\n",
     "    }\n",
     "}"
    ]
@@ -312,6 +326,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def partition(\n",
+    "    list: List[A], \n",
+    "    pred: A => Boolean): (List[Int], List[Int]) = \n",
+    "    ???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "run(new TestEvenOddPartition(partitionEvenOdd))"
    ]
   },
@@ -327,6 +353,40 @@
    "metadata": {},
    "source": [
     "Write a funtion that receives a list of pairs of integers and returns a new list made from the sum of all pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(1,2) match {\n",
+    "    case (x,y) => \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres0\u001b[39m: \u001b[32mList\u001b[39m[(\u001b[32mInt\u001b[39m, \u001b[32mInt\u001b[39m)] = \u001b[33mList\u001b[39m((\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m), (\u001b[32m3\u001b[39m, \u001b[32m4\u001b[39m), (\u001b[32m5\u001b[39m, \u001b[32m6\u001b[39m))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "List((1,2), (3,4), (5,6)) match {\n",
+    "    case head :: tail =>\n",
+    "        head._1 ... head._2 ... \n",
+    "}"
    ]
   },
   {
@@ -632,15 +692,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mt\u001b[39m: \u001b[32mTree\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mNode\u001b[39m(Empty(), \u001b[32m1\u001b[39m, Empty())"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val t: Tree[Int] = leaf(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres8\u001b[39m: \u001b[32mAny\u001b[39m = \u001b[33mNode\u001b[39m(Empty(), \u001b[32m1\u001b[39m, Empty())"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t match {\n",
+    "    case Empty() => 0\n",
+    "    case Node(l, e, r) => \n",
+    "        val t1: Node[Int] = Node(l,e,r) \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTree\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mEmpty\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mNode\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// type Tree[A] = 1 + Tree[A] * A * Tree[A]\n",
     "\n",
     "sealed abstract class Tree[A]\n",
     "case class Empty[A]() extends Tree[A]\n",
-    "case class Node[A](left: Tree[A], root: A, right: Tree[A]) extends Tree[A]"
+    "case class Node[A](\n",
+    "    left: Tree[A], \n",
+    "    root: A, \n",
+    "    right: Tree[A]) extends Tree[A]"
    ]
   },
   {
@@ -652,9 +772,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mobject\u001b[39m \u001b[36mTree\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36mTree._\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "object Tree{\n",
     "    \n",
@@ -678,6 +810,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mt1\u001b[39m: \u001b[32mNode\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mNode\u001b[39m(\u001b[33mNode\u001b[39m(Empty(), \u001b[32m5\u001b[39m, Empty()), \u001b[32m4\u001b[39m, Empty())"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val t1 = Node(Node(Empty(), 5, Empty()), 4, Empty())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres6\u001b[39m: \u001b[32mBoolean\u001b[39m = true"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "left(leaf(5), 4) == t1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -693,9 +865,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestTreeNumNodes\u001b[39m"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestTreeNumNodes(\n",
     "    numNodes: Tree[Int] => Int\n",
@@ -712,19 +895,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mnumNodes\u001b[39m"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def numNodes[A](tree: Tree[A]): Int = \n",
-    "    ???"
+    "    tree match {\n",
+    "        case Empty() => 0 : Int\n",
+    "        case Node(l, e, r) => \n",
+    "            val numNodesLeft: Int = numNodes(l)\n",
+    "            val numNodesRight : Int = numNodes(r)\n",
+    "            numNodesLeft + numNodesRight + 1 : Int\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd12$Helper$TestTreeNumNodes:\u001b[0m\n",
+      "\u001b[32mconcatenate\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestTreeNumNodes(numNodes))"
    ]
@@ -1160,7 +1370,7 @@
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.0"
+   "version": "2.12.11"
   }
  },
  "nbformat": 4,
