Live coding session 9 - Vicálvaro

--- a/PF-2/templates/2.3-CurryHoward.ipynb
+++ b/PF-2/templates/2.3-CurryHoward.ipynb
@@ -170,9 +170,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cmd0.sc:1: not found: type Not\n",
+      "type A = Not[Unit]\n",
+      "         ^Compilation Failed"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Compilation Failed"
+     ]
+    }
+   ],
    "source": [
     "type A = Not[Unit]"
    ]
@@ -1323,12 +1341,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def program[P, Q]: Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
-    "    ???"
+    "    ??? : (Not[(P, Q)] => Either[Not[P], Not[Q]])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P, Q]: Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: Not[(P, Q)]) => \n",
+    "        ??? : Either[Not[P], Not[Q]]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Alternative 1\n",
+    "def program[P, Q]: Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: ((P, Q)) => Nothing) => \n",
+    "        Right((q : Q) => \n",
+    "            notPandQ((??? : P, q : Q)) : Nothing) \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Alternative 2\n",
+    "def program[P, Q]: Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: Not[(P, Q)]) => \n",
+    "        Left(??? : P => Nothing) : Either[Not[P], Not[Q]]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P, Q]: Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: ((P, Q)) => Nothing) => \n",
+    "        Left((p : P) => ??? : Nothing) : Either[Not[P], Not[Q]]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P, Q]: Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: ((P, Q)) => Nothing) => \n",
+    "        Left((p : P) => notPandQ(??? : (P, Q)) : Nothing) : Either[Not[P], Not[Q]]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P, Q]: Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: ((P, Q)) => Nothing) => \n",
+    "        Left((p : P) => \n",
+    "             notPandQ((??? : P, ??? : Q)) : Nothing) : Either[Not[P], Not[Q]]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P, Q]: Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: ((P, Q)) => Nothing) => \n",
+    "        Left((p : P) => \n",
+    "             notPandQ((p : P, ??? : Q)) : Nothing) : Either[Not[P], Not[Q]]\n",
+    "    "
    ]
   },
   {
@@ -1358,12 +1554,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def program[P]: Not[Not[P]] => P = \n",
-    "    ???"
+    "    (notnotP: (P => Nothing) => Nothing) => \n",
+    "        notnotP((p: P) => ??? : Nothing) : P"
    ]
   },
   {
@@ -1382,12 +1590,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def program[P]: Either[P, Not[P]] = \n",
-    "    ???"
+    "    Left(??? : P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P]: Either[P, Not[P]] = \n",
+    "    Right((p : P) => ??? : Nothing)"
    ]
   },
   {
@@ -1406,12 +1646,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def program[P, Q](thirdMiddleP: Either[P, Not[P]]): Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
-    "    ???"
+    "def program[P, Q](\n",
+    "    doubleNegationP: Not[Not[P]] => P\n",
+    "): Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    ???\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P, Q](\n",
+    "    thirdMiddleP: Either[P, Not[P]]\n",
+    "): Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: Not[(P, Q)]) =>\n",
+    "        thirdMiddleP match {\n",
+    "            case Left(p: P) => \n",
+    "                Right((q: Q) => notPandQ((p,q)) : Nothing) : \n",
+    "                    Either[Not[P], Not[Q]]\n",
+    "            case Right(notP: (P => Nothing)) => \n",
+    "                Left(notP) : Either[Not[P], Not[Q]]\n",
+    "        }\n",
+    "\n",
+    "/*\n",
+    "        Right( (q: Q) => \n",
+    "            thirdMiddleP match {\n",
+    "                case Left(q: Q) => \n",
+    "                    notPandQ((??? : P, q : Q)): Nothing \n",
+    "                case Right(notQ: Not[Q]) => \n",
+    "                    notQ(q) : Nothing \n",
+    "            }\n",
+    "        )*/"
    ]
   },
   {
