Live coding session 8 - Móstoles

--- a/PF-2/exercises/ProblemSet4.ipynb
+++ b/PF-2/exercises/ProblemSet4.ipynb
@@ -11,9 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mtype\u001b[39m \u001b[36mNot\u001b[39m\n",
+       "defined \u001b[32mtype\u001b[39m \u001b[36m<=>\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type Not[P] = P => Nothing\n",
     "type <=>[P, Q] = (P => Q, Q => P)"
@@ -110,12 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def proof[P, Q]: Not[P] => P => Q = \n",
-    "    ???"
+    "def proof[P, Q]: Not[P] => (P => Q) = \n",
+    "    (noP : P => Nothing) => \n",
+    "           ((p : P) => noP(p : P) : Q)"
    ]
   },
   {
@@ -160,12 +184,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def proof[P, Q]: Not[Either[P, Q]] => (Not[P], Not[Q]) = \n",
-    "    ???"
+    "    ??? : (Not[Either[P, Q]] => (Not[P], Not[Q]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P, Q]: Not[Either[P, Q]] => (Not[P], Not[Q]) = \n",
+    "    (nPOrQ : Not[Either[P, Q]]) => ??? : (Not[P], Not[Q])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P, Q]: Not[Either[P, Q]] => (Not[P], Not[Q]) = \n",
+    "    (nPOrQ : Not[Either[P, Q]]) => \n",
+    "            (??? : Not[P], ??? :Not[Q])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P, Q]: Not[Either[P, Q]] => (Not[P], Not[Q]) = \n",
+    "    (nPOrQ : Not[Either[P, Q]]) => \n",
+    "            (??? : P => Nothing, ??? : Q => Nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P, Q]: Not[Either[P, Q]] => (Not[P], Not[Q]) = \n",
+    "    (nPOrQ : Either[P, Q] => Nothing) => \n",
+    "            (??? : P => Nothing, ??? : Q => Nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P, Q]: Not[Either[P, Q]] => (Not[P], Not[Q]) = \n",
+    "    (nPOrQ : Either[P, Q] => Nothing) => \n",
+    "            ((p : P) => ??? : Nothing, (q : Q) => ??? : Nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P, Q]: Not[Either[P, Q]] => (Not[P], Not[Q]) = \n",
+    "    (nPOrQ : Either[P, Q] => Nothing) => \n",
+    "            ((p : P) => nPOrQ(Left(??? : P) : Either[P,Q]) : Nothing,\n",
+    "             (q : Q) => ??? : Nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P, Q]: Not[Either[P, Q]] => (Not[P], Not[Q]) = \n",
+    "    (nPOrQ : Either[P, Q] => Nothing) => \n",
+    "            ((p : P) => nPOrQ(Left(p : P) : Either[P,Q]) : Nothing,\n",
+    "             (q : Q) => nPOrQ(Right(q: Q) : Either[P,Q]) : Nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P, Q]: Not[Either[P, Q]] => (Not[P], Not[Q]) = \n",
+    "    nPOrQ  => \n",
+    "            (p => nPOrQ(Left(p)),\n",
+    "             q => nPOrQ(Right(q)))"
    ]
   },
   {
@@ -196,12 +409,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P]: (Not[P] => P) => P =\n",
+    "     (premise: Not[P] => P) =>\n",
+    "        premise((p : P) => ??? : Nothing) : P "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def proof[P](dn: Not[Not[P]] => P): (Not[P] => P) => P =\n",
     "    ???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P](third: Either[P, Not[P]]): (Not[P] => P) => P =\n",
+    "     f =>\n",
+    "            third match {\n",
+    "                case Left(p) => p\n",
+    "                case Right(nP) => f(nP) \n",
+    "            }"
    ]
   },
   {
@@ -259,6 +519,30 @@
     "    p1: Either[P, Either[Q, R]], \n",
     "    p2: Either[Not[P], S], \n",
     "    p3: S => R): Not[Q] => R = \n",
+    "    ???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mproof\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proof[P, Q, R, S]: Either[P, Either[Q, R]] => \n",
+    "                       Either[Not[P], S] => \n",
+    "                       (S => R) => \n",
+    "                       Not[Q] => R = \n",
     "    ???"
    ]
   },
