--- a/PF-2/templates/2.3-CurryHoward.ipynb
+++ b/PF-2/templates/2.3-CurryHoward.ipynb
@@ -1397,11 +1397,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def program[P, Q]: Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: ((P, Q)) => Nothing) => \n",
+    "        Left( (p: P) => \n",
+    "             notPandQ((p : P, ??? : Q)) : Nothing\n",
+    "        ) : Either[Not[P], Not[Q]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P, Q]: Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: ((P, Q)) => Nothing) => \n",
+    "        Right((q: Q) => \n",
+    "              notPandQ((??? : P, q : Q)) : Nothing\n",
+    "        ) : Either[Not[P], Not[Q]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P, Q](\n",
+    "    thirdMiddleP: Either[P, Not[P]] \n",
+    "): Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: ((P, Q)) => Nothing) => \n",
+    "        Right((q: Q) => \n",
+    "              thirdMiddleP match {\n",
+    "                  case Left(p: P) => \n",
+    "                      notPandQ((p : P, q : Q)) : Nothing\n",
+    "                  case Right(notP: P => Nothing) => \n",
+    "                      ??? : Nothing\n",
+    "        ) : Either[Not[P], Not[Q]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P, Q](\n",
+    "    thirdMiddleP: Either[P, Not[P]] \n",
+    "): Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
+    "    (notPandQ: ((P, Q)) => Nothing) => \n",
+    "        thirdMiddleP match {\n",
+    "            case Left(p: P) => \n",
+    "                Right((q: Q) => \n",
+    "                    notPandQ((p,q)): Nothing) : Either[Not[P], Not[Q]]\n",
+    "            case Right(notP: Not[P]) => \n",
+    "                Left(notP) : Either[Not[P], Not[Q]]\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mprogram\u001b[39m"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def program[P, Q](\n",
+    "    doubleNegation: Not[Not[P]] => P \n",
+    "): Not[(P, Q)] => Either[Not[P], Not[Q]] = \n",
     "    ???"
    ]
   },
